# SFMLGameDevelopmentByExample

./: .gitignore  CMakeLists.txt  README.md  build.sh
Resources/: textures.cfg  tiles.cfg
chapter_03/: Game.cpp  Game.h  Main.cpp  Snake.cpp  Snake.h  Textbox.cpp  Textbox.h  Window.cpp  Window.h  World.cpp  World.h  build.sh
chapter_04/: EventManager.cpp  EventManager.h  Game.cpp  Game.h  Main.cpp  Window.cpp  build.sh  keys.cfg  main
chapter_05/: BaseState.h  EventManager.h  Game.h  SharedContext.h  StateManager.cpp  StateManager.h  State_Paused.cpp  Window.cpp  Window.h  build.sh  keys.cfg
chapter_06/: EventManager.cpp  Game.cpp  Main.cpp  ResourceManager.h  SpriteSheet.cpp  State_Game.cpp  State_Game.h  State_GameOver.cpp  State_GameOver.h  State_Intro.cpp  State_Intro.h  State_MainMenu.cpp  State_MainMenu.h  TextureManager.h  Utilities.h  build.sh
chapter_07/: Anim_Base.cpp  BaseState.h  Character.cpp  Character.h  Directions.h  EntityBase.cpp  EntityBase.h  EntityManager.h  Game.cpp  Game.h  Main.cpp  Map.cpp  Map.h  SharedContext.h  State_ChooseMap.cpp  State_ChooseMap.h  State_Game.cpp  State_Game.h  State_Intro.cpp  State_Intro.h  State_LevelCompleted.cpp  State_LevelCompleted.h  State_Paused.cpp  State_Paused.h  Window.cpp  build.sh
chapter_08/: Anim_Base.cpp  Anim_Directional.cpp  Bitmask.h  Directions.h  Entity_Manager.cpp  Entity_Manager.h  EventManager.h  Game.cpp  Game.h  S_Base.cpp  S_Base.h  S_Collision.cpp  S_Collision.h  S_Control.cpp  S_Movement.h  StateManager.cpp  State_Game.cpp  System_Manager.cpp  build.sh
chapter_09/: C_Movable.h  C_Position.h  DebugOverlay.h  Entity_Manager.h  EventManager.cpp  Main.cpp  Map.cpp  Map.h  Message.h  MessageHandler.h  ResourceManager.h  S_Collision.cpp  S_Control.h  S_Movement.h  S_Renderer.cpp  SharedContext.h  StateManager.h  State_Game.cpp  State_GameOver.h  State_Intro.cpp  Utilities.h  build.sh
chapter_10/: C_Base.h  C_Collidable.h  C_State.h  Communicator.h  ECS_Types.h  EntityMessages.h  EventManager.h  Event_Queue.h  FontManager.h  GUI_Element.cpp  GUI_Element.h  GUI_Event.h  GUI_Interface.cpp  GUI_Manager.h  GUI_Scrollbar.h  Game.cpp  S_Control.cpp  S_Movement.cpp  S_Renderer.h  S_State.h  SharedContext.h  SpriteSheet.h  State_Game.h  State_GameOver.cpp  State_MainMenu.cpp  System_Manager.h  Utilities.h  build.sh  main
chapter_11/: Bitmask.h  C_Drawable.h  C_SpriteSheet.h  Entity_Manager.cpp  GUI_Style.h  (+29 more)
(+293 files in other folders)
